--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav>
+            <h2 class="nav-title">Ma<span class="orange-color">r</span>y</h2>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blogs</li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div>
+                <h1 class="banner-sub-title">Hi, I am</h1>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-discription">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus id blanditiis consequuntur possimus, eum dolorum inventore iste dolore quia tempora!</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+
+            </div>
+            <img src="images/hardy.png" alt="">
+
+        </div>
+    </header>
+    <main>
+        <section class="about">
+            <h3 class="section-title">
+                About Me
+            </h3>
+            <p class="section-discripsion">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
