--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@
             <p class="section-discripsion">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
             </p>
+            <div class="about-info-contaioner">
+                <div>
+                    <p class="info-title">Name:</p>
+                    <p class="info-discription">Mary Hardy</p>
+                </div>
+                <div>
+                    <p class="info-title">Email:</p>
+                    <p class="info-discription">info@gmail.com</p>
+                </div>
+                <div>
+                    <p class="info-title">Date Of Birth</p>
+                    <p class="info-discription">11 November 1987</p>
+                </div>
+                <div>
+                    <p class="info-title">From</p>
+                    <p class="info-discription">New York , usa</p>
+                </div>
+            </div>
 
         </section>
     </main>
