--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/df5e80cb5b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -51,11 +52,11 @@
                     <p class="info-discription">info@gmail.com</p>
                 </div>
                 <div>
-                    <p class="info-title">Date Of Birth</p>
+                    <p class="info-title">Date Of Birth:</p>
                     <p class="info-discription">11 November 1987</p>
                 </div>
                 <div>
-                    <p class="info-title">From</p>
+                    <p class="info-title">From:</p>
                     <p class="info-discription">New York , usa</p>
                 </div>
             </div>
